Job detail page Fixed 'missing host' calculation where hosts became reachable in prior tasks. Now the % width of the gap matches the unreachable (or failed) %.

--- a/awx/ui/static/less/job-details.less
+++ b/awx/ui/static/less/job-details.less
@@ -75,6 +75,9 @@
 .unreachable-hosts-color {
     color: @unreachable-hosts-color;
 }
+.missing-hosts {
+    color: transparent;
+}
 
 .job_well {
     padding: 8px;
